# knexforge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md  dataset.jsonl  dataset_bk.jsonl  knex-builder.skill  models.jsonl  openscad_stderr.txt  openscad_stderr2.txt  pyproject.toml  test_debug_constraints.py  test_debug_full.py  test_debug_mesh.py  test_dummy_body.ts  test_output.jsonl  test_rapier.js  test_rapier2.js  test_rapier3.js  test_rapier_axis.js  test_rapier_bug.js  test_rapier_generic.js  test_rapier_intoraw.js  test_rapier_sim.js  test_rapier_sim2.js  test_rapier_sim3.js  test_rapier_sim4.js  test_rapier_sim5.js  test_rapier_sim6.js  test_rapier_sim7.js  test_rapier_sim8.js  test_rapier_sim9.js  test_red_connector.ts  test_simulation_fix.py  test_topology.knx  test_triangle_diagnostic.js  wrangler.jsonc  wrangler.toml
docs/: AGENT-ONBOARDING.md  DOCUMENTATION-AUDIT.md  ISSUE-4-TRIANGLE-LOOP-CLOSURE.md  QUICK-REFERENCE.md  TROUBLESHOOTING.md  ai-training-plan.md  export-format.md  file-formats.md  generative-kinematics-plan.md  goal-driven-synthesis.md  new-format-ml-process.md  phase-10-visual-followups.md  physics-model.md  rendering-architecture.md
exports/: build-2026-03-01(5).knx  build-2026-03-01.knx  motor_example.knx
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  test_red.ts  vite.config.ts
parts/: README.md  connector-2way-grey-v1.json  connector-2way-red-v1.json  connector-2way-straight-orange-v1.json  connector-3way-green-v1.json  connector-3way-red-v1.json  connector-3way-yellow-v1.json  motor-v1.json  (+19 more)
(+325 files in other folders)
